[gd_scene load_steps=4 format=3 uid="uid://dkseecaqk1bqm"]

[ext_resource type="FontFile" uid="uid://d35m2oa2ffv4j" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_5yl8d"]
[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_54vp3"]
[ext_resource type="FontFile" uid="uid://dn2uriq4mrftq" path="res://assets/fonts/PixelOperator8.ttf" id="2_7nes1"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_54vp3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -151.5
offset_right = 181.5
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2

[node name="WinnerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5yl8d")
theme_override_font_sizes/font_size = 64
text = "Player x WON"

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
theme_override_fonts/font = ExtResource("2_7nes1")
theme_override_font_sizes/font_size = 16
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayAgainButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_7nes1")
theme_override_font_sizes/font_size = 16
text = "Main Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../PlayAgainButton")
theme_override_fonts/font = ExtResource("2_7nes1")
theme_override_font_sizes/font_size = 16
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
